G1CollectedHeap::print_on prints incorrect capacity

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 10
    • Affects Version/s: 9, 10
    • Component/s: hotspot
    • gc
    • b33

        st->print(" [" PTR_FORMAT ", " PTR_FORMAT ", " PTR_FORMAT ")",
                  p2i(_hrm.reserved().start()),
                  p2i(_hrm.reserved().start() + _hrm.length() + HeapRegion::GrainWords),
                  p2i(_hrm.reserved().end()));
      The second value should be the amount of committed regions but it adds the heap region size instead of multiplying by the heap region size.

            Assignee:
            Erik Helin
            Reporter:
            Mikael Gerdin (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: