8177959: G1CollectedHeap::print_on prints incorrect capacity

Reviewed-by: sjohanss, ehelin, pliden